--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.14.RELEASE</version>
+        <version>1.5.2.RELEASE</version>
     </parent>
     <modules>
         <module>nephelo-common</module>
@@ -28,6 +28,7 @@
         <module>nephelo-oss</module>
         <module>nephelo-api</module>
         <module>nephelo-consumer</module>
+        <module>nephelo-gate</module>
     </modules>
 
     <developers>
