--- a/nephelo-dhx/src/main/resources/application.yml
+++ b/nephelo-dhx/src/main/resources/application.yml
@@ -1,89 +1,3 @@
 spring:
-  application:
-    name: nephelo-dhx
-  datasource:
-    name: nephelo-datasrouce
-    url: jdbc:mysql://localhost/nephelo?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
-    username: root
-    password: yanlin@123
-    type: com.alibaba.druid.pool.DruidDataSource
-    # jdbc-connector6之后名字变成下面这个
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙,防止sql注入
-    filters: stat,wall,log4j
-    maxActive: 20
-    initialSize: 1
-    minIdle: 1
-    # 配置获取连接等待超时的时间
-    maxWait: 60000
-    # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
-    timeBetweenEvictionRunsMillis: 60000
-    # 配置一个连接在池中最小生存的时间，单位是毫秒
-    minEvictableIdleTimeMillis: 300000
-    validationQuery: SELECT 1 FROM DUAL
-    testWhileIdle: true
-    testOnBorrow: false
-    testOnReturn: false
-    poolPreparedStatements: true
-    maxOpenPreparedStatements: 20
-    logSlowSql: true
-    #durid登陆账号密码
-    loginUsername: admin
-    loginPassword: admin
-  mail:
-    host: smtp.qq.com
-    username: yanlin0802@qq.com
-    password:
-    properties:
-      mail:
-        smtp:
-          auth: true
-          starttls:
-            enable: false
-            required: false
-
-server:
-  port: 40111
-
-security:
-  user:
-    name: admin
-    password: admin
-    role: USER
-  basic:
-    enabled: false
-
-mybatis:
-  basepackage: com.nephelo.dhx.mapper
-  xmlLocation: classpath:mapper/**/*.xml
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:4001/eureka/
-
-management:
-  security:
-    enabled: false
-
-hystrix:
-  command:
-    default:
-      execution:
-        isolation:
-          thread:
-            timeoutInMilliseconds: 30000 #缺省为1000
-
-logging:
-  level:
-    tk.mybatis: DEBUG
-    com.nephelo.user: DEBUG
-  config: classpath:logback.xml
-  path: /nephelo/user
-
-swagger:
-  basepackage: com.nephelo.dhx.controller
-  service:
-    name: nephelo-dhx
-    description: nephelo-dhx后端服务接口
-    developer: F1
+  profiles:
+    active: home
